--- a/src/pages/town/town.html
+++ b/src/pages/town/town.html
@@ -17,12 +17,14 @@
   <body>
     <div class="wrapper">
       <div class="inner-980 town">
+        <!-- ST: 마을 배경이미지 -->
         <img
           class="town-img"
           src="../../assets/town/town.png"
           usemap="#town-map"
         />
-
+        <!-- ED: 마을 배경이미지-->
+        <!-- ST: 마을 이미지맵-->
         <map name="town-map">
           <area
             target="_self"
@@ -57,6 +59,7 @@
             shape="rect"
           />
         </map>
+        <!-- ED: 마을 이미지맵-->
       </div>
     </div>
   </body>
