♻️ 임시 가이드 완료
town,slot ui css일부수정

--- a/src/pages/town/town.html
+++ b/src/pages/town/town.html
@@ -17,6 +17,28 @@
   <body>
     <div class="wrapper">
       <div class="inner-980 town">
+        <!-- ST: 아이콘 이미지 -->
+        <img
+          class="dictionary-icon"
+          src="../../assets/town/dictionary.png"
+          alt="도감"
+        />
+        <img
+          class="gacha-icon"
+          src="../../assets/town/gachashop.png"
+          alt="포켓몬 가챠 게임"
+        />
+        <img
+          class="slot-icon"
+          src="../../assets/town/slotshop.png"
+          alt="포켓몬 슬롯 게임"
+        />
+        <img
+          class="info-icon"
+          src="../../assets/town/userinfo.png"
+          alt="내 정보"
+        />
+        <!-- ED: 아이콘 배경이미지-->
         <!-- ST: 마을 배경이미지 -->
         <img
           class="town-img"
