--- a/src/pages/slot/slot.html
+++ b/src/pages/slot/slot.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/src/style.css" />
     <link rel="stylesheet" href="./slot.css" />
     <script type="module" src="./slot.ts"></script>
-    <title>Twon</title>
+    <title>Slot</title>
   </head>
   <body>
     <div class="wrapper">
