--- a/src/pages/slot/slot.html
+++ b/src/pages/slot/slot.html
@@ -17,36 +17,31 @@
   <body>
     <div class="wrapper">
       <div class="inner-980 slot">
-        <!-- ST : 슬롯 버튼 + 슬롯테두리이미지 + 슬롯 숫자 랩핑-->
-
-        <div class="slot-wrapper">
-          <!-- ST : 슬롯버튼-->
-          <button class="slot-btn">
-            <img
-              class="slot-btn-img"
-              src="../../assets/slot/slot-btn.png"
-              alt="슬롯버튼"
-            />
-          </button>
-          <!-- ED: 슬롯버튼 -->
-
-          <!-- ST : 슬롯테두리 이미지-->
+        <!-- ST : 슬롯버튼-->
+        <button class="slot-btn" id="slotBtn">
           <img
-            src="../../assets/slot/slot.png"
-            class="slot-bg"
-            alt="포켓몬 슬롯 이미지"
+            class="slot-btn-img"
+            src="../../assets/slot/slot-btn.png"
+            alt="슬롯버튼"
           />
-          <!-- ED: 슬롯테두리 이미지 -->
+        </button>
+        <!-- ED: 슬롯버튼 -->
 
-          <!-- ST : 슬롯숫자-->
-          <ul class="slot-numbers">
-            <li class="slot-num">1</li>
-            <li class="slot-num">2</li>
-            <li class="slot-num">3</li>
-          </ul>
-          <!-- ED: 슬롯숫자 -->
-        </div>
-        <!-- ED: 슬롯 버튼 + 슬롯테두리이미지 + 슬롯 숫자 랩핑 -->
+        <!-- ST : 슬롯테두리 이미지-->
+        <img
+          src="../../assets/slot/slot.png"
+          class="slot-bg"
+          alt="포켓몬 슬롯 이미지"
+        />
+        <!-- ED: 슬롯테두리 이미지 -->
+
+        <!-- ST : 슬롯숫자-->
+        <ul class="slot-numbers">
+          <li class="slot-num">?</li>
+          <li class="slot-num">?</li>
+          <li class="slot-num">?</li>
+        </ul>
+        <!-- ED: 슬롯숫자 -->
       </div>
     </div>
   </body>
