--- a/src/pages/dictionary/dictionary.html
+++ b/src/pages/dictionary/dictionary.html
@@ -1,38 +1,106 @@
 <!doctype html>
-<html lang="ko-kr">
+<html lang="ko-KR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>도감</title>
+    <link rel="stylesheet" href="/src/style.css" />
     <link rel="stylesheet" href="/src/pages/dictionary/dictionary.css" />
-    <link rel="stylesheet" href="/src/styles/font.css" />
+    <link rel="stylesheet" href="/src/dictionary-modal/modal.css" />
+
+    <title>포켓몬 도감</title>
   </head>
   <body>
-    <h1>앗..야생의 포켓몬이 나타났다..!</h1>
-    <header class="header">
-      <div class="logo">
-        <img src="/src/assets/Pokebola-pokeball-png-0.png" alt="포켓몬로고" />
-        <span>나의 포켓몬 도감</span>
+    <div class="wrapper">
+      <div class="inner-980">
+        <div class="pokedex">
+          <div class="pokedex-header">
+            <div class="light">
+              <img src="/src/assets/poke_light.png" alt="/" />
+            </div>
+            <div class="logo">
+              <img src="/src/assets/포켓몬로고.png" alt="포켓몬로고" />
+            </div>
+            <div class="pokeball">
+              <img
+                src="/src/assets/Pokebola-pokeball-png-0.png"
+                alt="포켓볼 상세조회"
+              />
+            </div>
+          </div>
+
+          <div class="search-bar">
+            <input
+              type="text"
+              placeholder="포켓몬 이름, 특성 등을 검색하세요"
+            />
+            <button class="search-btn">🔍</button>
+            <select>
+              <option>도감번호 순서</option>
+              <option>이름 순서</option>
+              <option>타입 순서</option>
+            </select>
+          </div>
+
+          <div class="pokedex-content" id="pokedex">
+            <div class="pokemon-card">
+              <img
+                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png"
+                alt="이상해씨"
+              />
+              <div class="poke-num">#001</div>
+              <div class="poke-name">이상해씨</div>
+            </div>
+            <div class="pokemon-card empty">
+              <div class="poke-num">115</div>
+            </div>
+            <div class="pokemon-card">
+              <img
+                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/7.png"
+                alt="꼬부기"
+              />
+              <div class="poke-num">#api</div>
+              <div class="poke-name">api</div>
+            </div>
+            <div class="pokemon-card">
+              <img
+                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/7.png"
+                alt="꼬부기"
+              />
+              <div class="poke-num">#api</div>
+              <div class="poke-name">api</div>
+            </div>
+          </div>
+        </div>
       </div>
-      <form class="search-form">
-        <input
-          type="text"
-          placeholder="포켓몬 이름 또는 설명, 특성 키워드를 입력해주세요."
-        />
-        <button type="submit">🔍</button>
-      </form>
-
-      <button class="detailed-inquiry">
-        <img src="/src/assets/icon_ball_b.png" alt="상세조회 버튼" />
-        <span>상세조회</span>
-      </button>
-    </header>
-
-    <div class="status-bar">
-      <h3 class="sub-pixel">발견한 수: 123</h3>
-      <h3 class="sub-pixel">잡은 수: 123</h3>
     </div>
-    <div class="container" id="pokedex"></div>
+
+    <div id="type-modal" class="modal hidden">
+      <div class="modal-content type-modal">
+        <button id="close-type-modal" class="modal-close">✕</button>
+        <h3>앗..야생의 포켓몬이 나타났다..!</h3>
+
+        <div class="type-grid">
+          <button class="type-btn" data-type="노말">노말</button>
+          <button class="type-btn" data-type="불꽃">불꽃</button>
+          <button class="type-btn" data-type="물">물</button>
+          <button class="type-btn" data-type="풀">풀</button>
+          <button class="type-btn" data-type="전기">전기</button>
+          <button class="type-btn" data-type="얼음">얼음</button>
+          <button class="type-btn" data-type="격투">격투</button>
+          <button class="type-btn" data-type="독">독</button>
+          <button class="type-btn" data-type="땅">땅</button>
+          <button class="type-btn" data-type="비행">비행</button>
+          <button class="type-btn" data-type="에스퍼">에스퍼</button>
+          <button class="type-btn" data-type="벌레">벌레</button>
+          <button class="type-btn" data-type="바위">바위</button>
+          <button class="type-btn" data-type="고스트">고스트</button>
+          <button class="type-btn" data-type="드래곤">드래곤</button>
+          <button class="type-btn" data-type="악">악</button>
+          <button class="type-btn" data-type="강철">강철</button>
+          <button class="type-btn" data-type="페어리">페어리</button>
+        </div>
+      </div>
+    </div>
     <script type="module" src="/src/pages/dictionary/dictionary.ts"></script>
   </body>
 </html>
