💄 Town,slot UI제작
town모달 50% 슬롯 버튼 애니메이션 추가

--- a/src/pages/town/town.html
+++ b/src/pages/town/town.html
@@ -91,10 +91,50 @@
           />
         </map>
         <!-- ED: 마을 이미지맵-->
-        <dialog id="userInfoModal" class="user-info-modal d-none">
-          <h2>내 모달</h2>
-          <p>내용 껑껑</p>
-          <button id="userInfoModalCloseBtn">닫기</button>
+        <dialog id="userInfoModal" class="user-info-modal">
+          <ul class="user-info-text">
+            <li>
+              <button id="userInfoModalCloseBtn" class="modal-close-btn">
+                <img
+                  src="../../assets/town/modalclosebtn.png"
+                  alt="닫기버튼"
+                />닫기
+              </button>
+            </li>
+            <li>[칭송받는자]</li>
+            <li>이름 : 송채은</li>
+            <li>도감 : 150마리</li>
+            <li>접속시간 : 01:37</li>
+          </ul>
+          <ul class="batges">
+            <li class="batge">
+              <img src="../../assets/town/badge1.png" alt="" />
+            </li>
+            <li class="batge">
+              <img src="../../assets/town/badge1.png" alt="" />
+            </li>
+            <li class="batge">
+              <img src="../../assets/town/badge1.png" alt="" />
+            </li>
+            <li class="batge">
+              <img src="../../assets/town/badge1.png" alt="" />
+            </li>
+            <li class="batge">
+              <img src="../../assets/town/badge1.png" alt="" />
+            </li>
+            <li class="batge">
+              <img src="../../assets/town/badge1.png" alt="" />
+            </li>
+            <li class="batge">
+              <img src="../../assets/town/badge1.png" alt="" />
+            </li>
+            <li class="batge">
+              <img src="../../assets/town/badge1.png" alt="" />
+            </li>
+            <li class="batge">
+              <img src="../../assets/town/badge1.png" alt="" />
+            </li>
+          </ul>
         </dialog>
       </div>
     </div>
