--- a/src/pages/gacha/gacha.html
+++ b/src/pages/gacha/gacha.html
@@ -9,39 +9,25 @@
   <link rel="stylesheet" href="./gacha.css" />
 </head>
 <body>
-
   <div class="wrapper">
     <div class="inner-980 gacha">
-
       <div class="gacha-base">
-        <img class="event-none gacha-bg" src="/src/asset/gacha/gacha-bg.png" alt="몬스터볼 페이지 배경" />
+        <img class="event-none gacha-bg" src="../../assets/gacha/gacha-bg.png" alt="몬스터볼 페이지 배경" />
 
-        <img class="event-none gacha-text-w" src="/src/asset/gacha/gacha-text-w.png" alt="" />
-        <img class="event-none gacha-text-y" src="/src/asset/gacha/gacha-text-y.png" alt="" />
+        <img class="event-none gacha-text-w" src="../../assets/gacha/gacha-text-w.png" alt="" />
+        <img class="event-none gacha-text-y" src="../../assets/gacha/gacha-text-y.png" alt="" />
 
-        <img class="event-none monster-ball" src="/src/asset/gacha/monsterBall.png" alt="" />
+        <img class="event-none monster-ball" src="../../assets/gacha/monsterBall.png" alt="" />
 
         <!-- 집게 -->
         <div class="claw-box">
-            <img class="claw-body-01" src="/src/asset/gacha/gacha-claw-bottom.png" alt="">
-              <img class="claw-line" src="/src/asset/gacha/gacha-claw-line.png" alt="">
-              <img class="claw" src="/src/asset/gacha/gacha-claw.png" alt="">
-              <img class="claw-open" src="/src/asset/gacha/gacha-claw-open.png" alt="">
+            <img class="claw-body-01" src="../../assets/gacha/gacha-claw-bottom.png" alt="">
+              <img class="claw-line" src="../../assets/gacha/gacha-claw-line.png" alt="">
+              <img class="claw" src="../../assets/gacha/gacha-claw.png" alt="">
+              <img class="claw-open" src="../../assets/gacha/gacha-claw-open.png" alt="">
         </div>
-
       </div>
-
-
     </div>
   </div>
-
-  <script>
-    // setInterval(() => {
-    //   const gachaText = document.querySelector('gacha-text-w')
-    //   let count = 0;
-    //   count++;
-      
-    // },100)
-  </script>
 </body>
 </html>
