💄 inex, home, satrt UI 진행중

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link
       rel="preload"
       as="font"
-      href="/public/fonts/Galmuri9.woff"
+      href="/fonts/Galmuri9.woff"
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/src/style.css" />
@@ -21,7 +21,7 @@
     <div class="wrapper">
       <!-- ST: Index -->
 
-      <div class="index inner-1240">
+      <div class="index inner-980">
         <!-- ST: Music-Noti -->
         <dialog class="music-noti">
           <div>
@@ -63,7 +63,7 @@
               />
               <h2 class="eng-pixel">
                 CHAEEUN <br />
-                <strong>IDEA STRATEGIST</strong>
+                <strong>POKEMON</strong>
               </h2>
             </div>
             <div class="swiper-slide">
