--- a/src/pages/start/start.html
+++ b/src/pages/start/start.html
@@ -25,10 +25,6 @@
           <img src="../../assets/start/red.png" alt="레드 캐릭터 이미지" />
         </div>
         <div class="text-area">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
           <ul class="text-list">
             <li>
               <p>
@@ -41,10 +37,15 @@
             </li>
             <li>
               <p>나의 이름은</p>
-              <input type="text" />
+              <input
+                type="text"
+                id="userName"
+                class="user-name"
+                maxlength="8"
+              />
             </li>
             <li>
-              <p>그래! 네 이름은 <span></span> 이구나!</p>
+              <p>그래! 네 이름은 <span class="call-user"></span> 이구나!</p>
             </li>
             <li>
               <p>드디어 지금부터 너의 이야기가 시작된다!</p>
