💄 Town 페이지 모달창구현완료

--- a/src/pages/town/town.html
+++ b/src/pages/town/town.html
@@ -91,14 +91,12 @@
           />
         </map>
         <!-- ED: 마을 이미지맵-->
-        <dialog id="userInfoModal" class="user-info-modal">
+        <dialog id="userInfoModal" class="user-info-modal d-none">
           <ul class="user-info-text">
             <li>
               <button id="userInfoModalCloseBtn" class="modal-close-btn">
-                <img
-                  src="../../assets/town/modalclosebtn.png"
-                  alt="닫기버튼"
-                />닫기
+                <img src="../../assets/town/modalclosebtn.png" alt="닫기버튼" />
+                닫기
               </button>
             </li>
             <li>[칭송받는자]</li>
@@ -108,31 +106,31 @@
           </ul>
           <ul class="batges">
             <li class="batge">
-              <img src="../../assets/town/badge1.png" alt="" />
+              <img src="../../assets/town/badge1.png" alt="회색체육관 뱃지" />
             </li>
             <li class="batge">
-              <img src="../../assets/town/badge1.png" alt="" />
+              <img src="../../assets/town/badge2.png" alt="블루체육관 뱃지" />
             </li>
             <li class="batge">
-              <img src="../../assets/town/badge1.png" alt="" />
+              <img src="../../assets/town/badge3.png" alt="갈색체육관 뱃지" />
             </li>
             <li class="batge">
-              <img src="../../assets/town/badge1.png" alt="" />
+              <img src="../../assets/town/badge4.png" alt="무지개체육관 뱃지" />
             </li>
             <li class="batge">
-              <img src="../../assets/town/badge1.png" alt="" />
+              <img src="../../assets/town/badge5.png" alt="연분홍체육관 뱃지" />
             </li>
             <li class="batge">
-              <img src="../../assets/town/badge1.png" alt="" />
+              <img src="../../assets/town/badge6.png" alt="노랑체육관 뱃지" />
             </li>
             <li class="batge">
-              <img src="../../assets/town/badge1.png" alt="" />
+              <img src="../../assets/town/badge7.png" alt="홍련체육관 뱃지" />
             </li>
             <li class="batge">
-              <img src="../../assets/town/badge1.png" alt="" />
+              <img src="../../assets/town/badge8.png" alt="상록체육관 뱃지" />
             </li>
             <li class="batge">
-              <img src="../../assets/town/badge1.png" alt="" />
+              <img src="../../assets/town/ball.png" alt="몬스터볼" />
             </li>
           </ul>
         </dialog>
