--- a/src/pages/town/town.html
+++ b/src/pages/town/town.html
@@ -106,30 +106,34 @@
           </ul>
           <ul class="batges">
             <li class="batge">
-              <img src="../../assets/town/badge1.png" alt="회색체육관 뱃지" />
+              <img
+                class="batge-gray"
+                src="../../assets/town/badge1.png"
+                alt="회색체육관 뱃지"
+              />
             </li>
-            <li class="batge">
+            <li class="batge batge-gray">
               <img src="../../assets/town/badge2.png" alt="블루체육관 뱃지" />
             </li>
-            <li class="batge">
+            <li class="batge batge-gray">
               <img src="../../assets/town/badge3.png" alt="갈색체육관 뱃지" />
             </li>
-            <li class="batge">
+            <li class="batge batge-gray">
               <img src="../../assets/town/badge4.png" alt="무지개체육관 뱃지" />
             </li>
-            <li class="batge">
+            <li class="batge batge-gray">
               <img src="../../assets/town/badge5.png" alt="연분홍체육관 뱃지" />
             </li>
-            <li class="batge">
+            <li class="batge batge-gray">
               <img src="../../assets/town/badge6.png" alt="노랑체육관 뱃지" />
             </li>
-            <li class="batge">
+            <li class="batge batge-gray">
               <img src="../../assets/town/badge7.png" alt="홍련체육관 뱃지" />
             </li>
-            <li class="batge">
+            <li class="batge batge-gray">
               <img src="../../assets/town/badge8.png" alt="상록체육관 뱃지" />
             </li>
-            <li class="batge">
+            <li class="batge batge-gray">
               <img src="../../assets/town/ball.png" alt="몬스터볼" />
             </li>
           </ul>
