✨ Slot 랜덤 숫자 애니메이션 기능 개발

--- a/src/pages/slot/slot.html
+++ b/src/pages/slot/slot.html
@@ -37,9 +37,9 @@
 
         <!-- ST : 슬롯숫자-->
         <ul class="slot-numbers">
-          <li class="slot-num">?</li>
-          <li class="slot-num">?</li>
-          <li class="slot-num">?</li>
+          <li class="slot-num">0</li>
+          <li class="slot-num">0</li>
+          <li class="slot-num">0</li>
         </ul>
         <!-- ED: 슬롯숫자 -->
       </div>
