🚚 도감에서 사용할 이미지 폴더 생성성

--- a/src/pages/dictionary/dictionary.html
+++ b/src/pages/dictionary/dictionary.html
@@ -15,14 +15,17 @@
         <div class="pokedex">
           <div class="pokedex-header">
             <div class="light">
-              <img src="/src/assets/poke_light.png" alt="/" />
+              <img src="/src/assets/dictionary/poke_light.png" alt="/" />
             </div>
             <div class="logo">
-              <img src="/src/assets/포켓몬로고.png" alt="포켓몬로고" />
+              <img
+                src="/src/assets/dictionary/포켓몬로고.png"
+                alt="포켓몬로고"
+              />
             </div>
             <div class="pokeball">
               <img
-                src="/src/assets/Pokebola-pokeball-png-0.png"
+                src="/src/assets/dictionary/Pokebola-pokeball-png-0.png"
                 alt="포켓볼 상세조회"
               />
             </div>
