💄 Gacha - 반응형 수정

--- a/src/pages/gacha/gacha.html
+++ b/src/pages/gacha/gacha.html
@@ -14,13 +14,13 @@
       <div class="gacha-base">
         <img class="event-none gacha-bg" src="../../assets/gacha/gacha-bg.png" alt="몬스터볼 페이지 배경" />
 
-        <img class="event-none gacha-text-w" src="../../assets/gacha/gacha-text-w.png" alt="" />
-        <img class="event-none gacha-text-y" src="../../assets/gacha/gacha-text-y.png" alt="" />
+        <img class="event-none gacha-text-w gacha-move" src="../../assets/gacha/gacha-text-w.png" alt="" />
+        <img class="event-none gacha-text-y gacha-move" src="../../assets/gacha/gacha-text-y.png" alt="" />
 
-        <img class="event-none monster-ball" src="../../assets/gacha/monsterBall.png" alt="" />
+        <img class="event-none monster-ball gacha-move" src="../../assets/gacha/monsterBall.png" alt="" />
 
         <!-- 집게 -->
-        <div class="claw-box">
+        <div class="claw-box small-claw">
             <img class="claw-body-01" src="../../assets/gacha/gacha-claw-bottom.png" alt="">
               <img class="claw-line" src="../../assets/gacha/gacha-claw-line.png" alt="">
               <img class="claw" src="../../assets/gacha/gacha-claw.png" alt="">
