✨ start 페이지 로컬스트로지 분리, allowMusic 함수 제작

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               />
               <h2 class="eng-pixel">
                 CHAEEUN <br />
-                <strong>POKEMON</strong>
+                <strong>SLOW POKE</strong>
               </h2>
             </div>
             <div class="swiper-slide">
