--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -27,12 +27,9 @@
         </h1>
 
         <div class="btn-area">
-          <a
-            href="../start/start.html"
-            target="_self"
-            class="eng-pixel press-start"
-            >PRESS START</a
-          >
+          <button type="button" class="eng-pixel press-start">
+            PRESS START
+          </button>
           <a href="#" target="_self" class="eng-pixel help">HELP</a>
         </div>
         <a
