--- a/src/pages/start/start.html
+++ b/src/pages/start/start.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./start.css" />
 
     <script type="module" src="./start.ts"></script>
+    <!-- <script type="module" src="./user-info.ts"></script> -->
 
     <title>404 Not Found</title>
   </head>
@@ -36,13 +37,14 @@
               <p>그럼 일단은 너의 이름을 알려다오!</p>
             </li>
             <li>
-              <p>나의 이름은</p>
+              <p>나의 이름은 ...</p>
               <input
                 type="text"
                 id="userName"
                 class="user-name"
                 maxlength="8"
               />
+              ...
             </li>
             <li>
               <p>그래! 네 이름은 <span class="call-user"></span> 이구나!</p>
