💄 포켓몬 get 화면 출력 공간 확보

--- a/src/pages/slot/slot.html
+++ b/src/pages/slot/slot.html
@@ -12,11 +12,20 @@
     <link rel="stylesheet" href="/src/style.css" />
     <link rel="stylesheet" href="./slot.css" />
     <script type="module" src="./slot.ts"></script>
+
     <title>Slot</title>
   </head>
   <body>
     <div class="wrapper">
       <div class="inner-980 slot">
+        <div class="pokeGet d-none">
+          <img
+            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/79.gif"
+            alt=""
+          />
+
+          <button type="menu">확인</button>
+        </div>
         <!-- ST : 슬롯버튼-->
         <button class="slot-btn" id="slotBtn">
           <img
