✨ 로컬 스토리지 관련 개발

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -21,6 +21,7 @@
     <div class="wrapper">
       <!-- ST: Home -->
       <div class="home inner-980">
+        <canvas id="ballCanvas"></canvas>
         <h1 class="project-logo">
           <img src="../../assets/home/project_logo.png" alt="POKEMON TM" />
           <p class="sub-pixel">CARD COLLECTION</p>
