--- a/src/pages/town/town.html
+++ b/src/pages/town/town.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/src/style.css" />
     <link rel="stylesheet" href="./town.css" />
     <script type="module" src="./town.ts"></script>
-    <title>Twon</title>
+    <title>Town</title>
   </head>
   <body>
     <div class="wrapper">
