✨ 뒤로가기, 음악 재생/음소거 기능 개발

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -34,7 +34,7 @@
           <a href="#" target="_self" class="eng-pixel help">HELP</a>
         </div>
         <a
-          href=""
+          href="https://github.com/FRONTENDBOOTCAMP-13th/JS-04-404-Not-Found"
           target="_blank"
           rel="noopener noreferrer"
           title="404 NOT FOUND 팀 깃허브 페이지 새창열림"
