--- a/src/pages/town/town.html
+++ b/src/pages/town/town.html
@@ -17,6 +17,15 @@
   <body>
     <div class="wrapper">
       <div class="inner-980 town">
+        <!-- ST : 뒤로가기, 음소거 버튼-->
+        <button type="button" class="back-btn">
+          <span class="sr-only">뒤로가기</span>
+        </button>
+        <button type="button" class="toggle-sound">
+          <span class="sr-only"></span>
+        </button>
+        <!-- ED : 뒤로가기, 음소거 버튼-->
+
         <!-- ST: 아이콘 이미지 -->
         <a href="../dictionary/dictionary.html">
           <img
