✨ Slot 음소거,뒤로가기 버튼 추가

--- a/src/pages/slot/slot.html
+++ b/src/pages/slot/slot.html
@@ -18,12 +18,19 @@
   <body>
     <div class="wrapper">
       <div class="inner-980 slot">
+        <!-- ST : 뒤로가기, 음소거 버튼-->
+        <button type="button" class="back-btn">
+          <span class="sr-only">뒤로가기</span>
+        </button>
+        <button type="button" class="toggle-sound">
+          <span class="sr-only"></span>
+        </button>
+        <!-- ED : 뒤로가기, 음소거 버튼-->
         <div class="pokeGet d-none">
           <img
             src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/79.gif"
             alt=""
           />
-
           <button type="menu">확인</button>
         </div>
         <!-- ST : 슬롯버튼-->
