✨ playTime 수정 및 user-info 작업 진행중

--- a/src/pages/town/town.html
+++ b/src/pages/town/town.html
@@ -108,10 +108,10 @@
                 닫기
               </button>
             </li>
-            <li>[칭송받는자]</li>
-            <li>이름 : 송채은</li>
-            <li>도감 : 150마리</li>
-            <li>접속시간 : 01:37</li>
+            <li>[뉴비]</li>
+            <li>이름 : <span class="user-name"></span></li>
+            <li>도감 : <span class="all-pokemons">150</span>마리</li>
+            <li>접속시간 : <span class="play-time"></span></li>
           </ul>
           <ul class="batges">
             <li class="batge">
