✨ 뽑은 포켓몬에 따른 별 배경 및 포켓몬 이름 출력

--- a/src/pages/slot/slot.html
+++ b/src/pages/slot/slot.html
@@ -34,13 +34,8 @@
               src="../../assets/slot/ex-card.png"
               alt=""
             />
-            <img
-              id="starBack"
-              class="star-back card-ab"
-              src="../../assets/slot/star1.png"
-              alt=""
-            />
-            <p class="pokeName card-ab">야돈</p>
+            <img id="starBack" class="star-back card-ab" src="" alt="" />
+            <p id="pokeName" class="poke-name card-ab"></p>
             <button id="cardGetBtn" class="card-ab get-btn" type="menu">
               <span>획득하기</span>
             </button>
