--- a/src/pages/slot/slot.html
+++ b/src/pages/slot/slot.html
@@ -29,11 +29,7 @@
         <!-- ST : 카드 획득 화면-->
         <div class="poke-get" id="pokeGet">
           <div class="card-wrapper">
-            <img
-              class="pokeCard card-ab"
-              src="../../assets/slot/ex-card.png"
-              alt=""
-            />
+            <img id="pokeCard" class="poke-card card-ab" src="" alt="" />
             <img id="starBack" class="star-back card-ab" src="" alt="" />
             <p id="pokeName" class="poke-name card-ab"></p>
             <button id="cardGetBtn" class="card-ab get-btn" type="menu">
