--- a/src/pages/town/town.html
+++ b/src/pages/town/town.html
@@ -108,41 +108,37 @@
                 닫기
               </button>
             </li>
-            <li>[뉴비]</li>
-            <li>이름 : <span class="user-name"></span></li>
-            <li>도감 : <span class="all-pokemons">150</span>마리</li>
-            <li>접속시간 : <span class="play-time"></span></li>
+            <li>[<span class="user-title"></span>]</li>
+            <li>이름: <span class="user-name"></span></li>
+            <li>도감: <span class="all-pokemons">150</span>마리</li>
+            <li>접속시간: <span class="play-time"></span></li>
           </ul>
-          <ul class="batges">
-            <li class="batge">
-              <img
-                class="batge-gray"
-                src="../../assets/town/badge1.png"
-                alt="회색체육관 뱃지"
-              />
+          <ul class="badges">
+            <li class="badge badge-gray">
+              <img src="../../assets/town/badge1.png" alt="회색체육관 뱃지" />
             </li>
-            <li class="batge batge-gray">
+            <li class="badge badge-gray">
               <img src="../../assets/town/badge2.png" alt="블루체육관 뱃지" />
             </li>
-            <li class="batge batge-gray">
+            <li class="badge badge-gray">
               <img src="../../assets/town/badge3.png" alt="갈색체육관 뱃지" />
             </li>
-            <li class="batge batge-gray">
+            <li class="badge badge-gray">
               <img src="../../assets/town/badge4.png" alt="무지개체육관 뱃지" />
             </li>
-            <li class="batge batge-gray">
+            <li class="badge badge-gray">
               <img src="../../assets/town/badge5.png" alt="연분홍체육관 뱃지" />
             </li>
-            <li class="batge batge-gray">
+            <li class="badge badge-gray">
               <img src="../../assets/town/badge6.png" alt="노랑체육관 뱃지" />
             </li>
-            <li class="batge batge-gray">
+            <li class="badge badge-gray">
               <img src="../../assets/town/badge7.png" alt="홍련체육관 뱃지" />
             </li>
-            <li class="batge batge-gray">
+            <li class="badge badge-gray">
               <img src="../../assets/town/badge8.png" alt="상록체육관 뱃지" />
             </li>
-            <li class="batge batge-gray">
+            <li class="badge">
               <img src="../../assets/town/ball.png" alt="몬스터볼" />
             </li>
           </ul>
