--- a/src/pages/gacha/gacha.html
+++ b/src/pages/gacha/gacha.html
@@ -6,9 +6,14 @@
   <title>Document</title>
   <link rel="stylesheet" href="/src/styles/reset.css" />
   <link rel="stylesheet" href="/src/style.css" />
-  <link rel="stylesheet" href="./gacha.css" />
+  <link rel="stylesheet" href="/src/pages/gacha/gacha.css" />
+  <script type="module" src="./three-scene.ts"></script>
+  <script type="module" src="./gacha.ts"></script>
 </head>
 <body>
+  <div class="three-test" id="three-scene">
+    <div class="pop-close"></div>
+  </div>
   <div class="wrapper">
     <div class="inner-980 gacha">
       <div class="gacha-base">
@@ -17,17 +22,26 @@
         <img class="event-none gacha-text-w gacha-move" src="../../assets/gacha/gacha-text-w.png" alt="" />
         <img class="event-none gacha-text-y gacha-move" src="../../assets/gacha/gacha-text-y.png" alt="" />
 
-        <img class="event-none monster-ball gacha-move" src="../../assets/gacha/monsterBall.png" alt="" />
+        <img class="event-none monster-ball gacha-move" src="../../assets/gacha/monsterBalls.png" alt="" />
+
+        <!-- 안내문구 -->
+        <p class="help-text">Move the arrow keyboard</p>
 
         <!-- 집게 -->
         <div class="claw-box small-claw">
-            <img class="claw-body-01" src="../../assets/gacha/gacha-claw-bottom.png" alt="">
-              <img class="claw-line" src="../../assets/gacha/gacha-claw-line.png" alt="">
-              <img class="claw" src="../../assets/gacha/gacha-claw.png" alt="">
-              <img class="claw-open" src="../../assets/gacha/gacha-claw-open.png" alt="">
+          <img class="claw-body-01" src="../../assets/gacha/gacha-claw-bottom.png" alt="">
+          <img class="claw-line" src="../../assets/gacha/gacha-claw-line.png" alt="">
+          <div class="claw-up-box">
+            <img class="claw" src="../../assets/gacha/gacha-claw.png" alt="">
+            <img class="claw-open" src="../../assets/gacha/gacha-claw-open.png" alt="">
+            <img class="claw-ball" src="../../assets/gacha/ball.png" alt="">
+          </div>
         </div>
       </div>
     </div>
+    <div class="joystick-left"></div>
+    <div class="joystick-right"></div>
+    <div class="a-button"></div>
   </div>
 </body>
 </html>
