💄 각자 포켓몬 이미지 수정 및 <head> 수정

--- a/index.html
+++ b/index.html
@@ -2,6 +2,82 @@
 <html lang="ko-KR">
   <head>
     <meta charset="UTF-8" />
+    <!-- 검색 엔진 -->
+    <meta name="title" content="POKEMON CARD COLLECTION" />
+    <meta
+      name="description"
+      content="POKEMON CARD COLLECTION 포켓몬 카드를 수집해보세요!"
+    />
+    <meta
+      name="keywords"
+      content="POKEMON, POKEMON CARD, 포켓몬, 포켓몬 카드"
+    />
+    <meta name="author" content="POKEMON CARD COLLECTION" />
+    <link rel="canonical" href="https://pokemon-cc.netlify.app/" />
+
+    <!-- 오픈 그래프 -->
+    <meta property="og:title" content="POKEMON CARD COLLECTION" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/images/POKEMON_CARD_COLLECTION.jpg/" />
+    <meta
+      property="og:description"
+      content="POKEMON CARD COLLECTION 포켓몬 카드를 수집해보세요!"
+    />
+    <meta property="og:url" content="https://pokemon-cc.netlify.app/" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Twitter 카드-->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="POKEMON CARD COLLECTION" />
+    <meta
+      name="twitter:description"
+      content="POKEMON CARD COLLECTION 포켓몬 카드를 수집해보세요!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://pokemon-cc.netlify.app/images/pokemon-card-collection.jpg"
+    />
+
+    <!-- 구조화 데이터 -->
+    <!-- TODO 파비콘 교체 및 채은님 jobTitle 교체 필요-->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "POKEMON CARD COLLECTION",
+        "url": "https://pokemon-cc.netlify.app",
+        "logo": "",
+        "description": "1세대 포켓몬 카드를 수집하는 게임형 UI 프로젝트입니다. 팀 404 Not Found가 제작하였으며 비상업적 목적입니다.",
+        "member": [
+          {
+            "@type": "Person",
+            "name": "길인환",
+            "jobTitle": "DESIGN",
+            "url": "https://github.com/InHwanGil"
+          },
+          {
+            "@type": "Person",
+            "name": "박준환",
+            "jobTitle": "PL",
+            "url": "https://github.com/fipark"
+          },
+          {
+            "@type": "Person",
+            "name": "송채은",
+            "jobTitle": "Scrum Master",
+            "url": "https://github.com/chaeeun-nim"
+          },
+          {
+            "@type": "Person",
+            "name": "임한길",
+            "jobTitle": "PM",
+            "url": "https://github.com/onewayay"
+          }
+        ]
+      }
+    </script>
+
     <link rel="icon" type="" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -12,9 +88,7 @@
     />
     <link rel="stylesheet" href="/src/style.css" />
     <link rel="stylesheet" href="/src/styles/main.css" />
-
     <script type="module" src="/src/main.ts"></script>
-
     <title>404 Not Found</title>
   </head>
   <body>
@@ -58,8 +132,8 @@
             </div>
             <div class="swiper-slide">
               <img
-                src="./src/assets/index/growlithe.png"
-                alt="포켓몬스터 가디 캐릭터 이미지"
+                src="./src/assets/index/slowpoke.png"
+                alt="포켓몬스터 야돈 캐릭터 이미지"
               />
               <h2 class="eng-pixel">
                 CHAEEUN <br />
@@ -68,8 +142,8 @@
             </div>
             <div class="swiper-slide">
               <img
-                src="./src/assets/index/growlithe.png"
-                alt="포켓몬스터 가디 캐릭터 이미지"
+                src="./src/assets/index/sandshrew.png"
+                alt="포켓몬스터 모래두지 캐릭터 이미지"
               />
               <h2 class="eng-pixel">
                 JUNHWAN <br />
@@ -78,8 +152,8 @@
             </div>
             <div class="swiper-slide">
               <img
-                src="./src/assets/index/growlithe.png"
-                alt="포켓몬스터 가디 캐릭터 이미지"
+                src="./src/assets/index/ditto.png"
+                alt="포켓몬스터 메타몽 캐릭터 이미지"
               />
               <h2 class="eng-pixel">
                 HANGIL <br />
