--- a/src/pages/slot/slot.html
+++ b/src/pages/slot/slot.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./slot.css" />
     <script type="module" src="./slot.ts"></script>
 
-    <title>Slot</title>
+    <title>POKEMON CARD COLLECTION</title>
   </head>
   <body>
     <div class="wrapper">
