--- a/src/pages/dictionary/dictionary.html
+++ b/src/pages/dictionary/dictionary.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/pages/dictionary/dictionary.css" />
-
-    <title>포켓몬 도감</title>
+    <title>POKEMON CARD COLLECTION</title>
   </head>
   <body>
     <div class="wrapper">
