💄 dictionary 페이지 폰트 추가

--- a/src/pages/dictionary/dictionary.html
+++ b/src/pages/dictionary/dictionary.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="preload"
+      as="font"
+      href="/public/fonts/Galmuri9.woff"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/src/style.css" />
     <link rel="stylesheet" href="/src/pages/dictionary/dictionary.css" />
     <title>POKEMON CARD COLLECTION</title>
   </head>
