💄 폰트수정정

--- a/src/pages/dictionary/dictionary.html
+++ b/src/pages/dictionary/dictionary.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="inner-980">
+      <div class="dictionary">
         <div class="pokedex">
           <div class="pokedex-header">
             <div class="logo">
