✨모바일 버튼기능추가

--- a/src/pages/slot/slot.html
+++ b/src/pages/slot/slot.html
@@ -64,6 +64,7 @@
         </ul>
         <!-- ED: 슬롯숫자 -->
       </div>
+      <button id="MslotBtn" type="button" class="a-button"></button>
     </div>
   </body>
 </html>
