--- a/src/pages/dictionary/dictionary.html
+++ b/src/pages/dictionary/dictionary.html
@@ -18,12 +18,20 @@
       <div class="dictionary">
         <div class="pokedex">
           <div class="pokedex-header">
-            <div class="logo">
+            <!-- ST : 뒤로가기, 음소거 버튼-->
+            <button type="button" class="back-btn">
+              <span class="sr-only">뒤로가기</span>
+            </button>
+            <button type="button" class="toggle-sound">
+              <span class="sr-only"></span>
+            </button>
+            <!-- ED : 뒤로가기, 음소거 버튼-->
+            <a href="../town/town.html" class="logo">
               <img
                 src="/src/assets/dictionary/포켓몬로고.png"
                 alt="포켓몬로고"
               />
-            </div>
+            </a>
             <div class="pokeball">
               <img
                 src="/src/assets/dictionary/Pokebola-pokeball-png-0.png"
