--- a/src/pages/town/town.html
+++ b/src/pages/town/town.html
@@ -17,6 +17,7 @@
   <body>
     <div class="wrapper">
       <div class="inner-980 town">
+        <div class="red-character"></div>
         <!-- ST : 뒤로가기, 음소거 버튼-->
         <button type="button" class="back-btn">
           <span class="sr-only">뒤로가기</span>
