✨ 카드 애니메이션 그라디언트 추가

--- a/src/pages/slot/slot.html
+++ b/src/pages/slot/slot.html
@@ -30,6 +30,8 @@
         <div class="poke-get" id="pokeGet">
           <div class="card-wrapper">
             <div class="shine"></div>
+            <div class="shine2"></div>
+            <div class="shadow"></div>
             <img id="pokeCard" class="poke-card card-ab" src="" alt="" />
             <img id="starBack" class="star-back card-ab" src="" alt="" />
             <p id="pokeName" class="poke-name card-ab"></p>
