🚧 도감 코드 리리펙토링2차차

--- a/src/pages/dictionary/dictionary.html
+++ b/src/pages/dictionary/dictionary.html
@@ -41,12 +41,14 @@
           </div>
 
           <div class="search-bar">
-            <input
+            <div class="input-group">
+              <input
               type="text"
               placeholder="포켓몬 이름, 번호 등을 검색하세요"
               id="search-input"
             />
             <button class="search-btn" id="search-btn">🔍</button>
+            </div>
             <select id="view-filter">
               <option>내 도감</option>
               <option>획득한 포켓몬</option>
