✨ 포켓몬 타입에 따른 배경변화

--- a/src/pages/slot/slot.html
+++ b/src/pages/slot/slot.html
@@ -28,7 +28,7 @@
         <!-- ED : 뒤로가기, 음소거 버튼-->
         <!-- ST : 카드 획득 화면-->
         <div class="poke-get" id="pokeGet">
-          <div class="card-wrapper">
+          <div id="cardBack" class="card-wrapper">
             <div class="shine"></div>
             <div class="shine2"></div>
             <div class="shadow"></div>
