♻️ 스페셜카드,카드배경 조건부 리팩토링
객체로 변환후, in 문법 활용하여 축약

--- a/src/pages/slot/slot.html
+++ b/src/pages/slot/slot.html
@@ -29,9 +29,11 @@
         <!-- ST : 카드 획득 화면-->
         <div class="poke-get" id="pokeGet">
           <div id="cardBack" class="card-wrapper">
+            <!-- ST :포켓몬 카드 효과-->
             <div class="shine"></div>
             <div class="shine2"></div>
             <div class="shadow"></div>
+            <!-- ED : 포켓몬 카드 효과-->
             <img id="pokeCard" class="poke-card card-ab" src="" alt="" />
             <img id="starBack" class="star-back card-ab" src="" alt="" />
             <p id="pokeName" class="poke-name card-ab"></p>
