✨ gacha (카드뽑기 이펙트 수정, 음악컨트롤 수정) 파비콘 추가

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       }
     </script>
 
-    <link rel="icon" type="" href="" />
+    <link rel="shortcut icon" href="/public/favicon/ball.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="preload"
