--- a/src/pages/gacha/gacha.html
+++ b/src/pages/gacha/gacha.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>POKEMON CARD COLLECTION</title>
+  <link rel="shortcut icon" href="/public/favicon/ball.ico" type="image/x-icon" />
   <link rel="stylesheet" href="/src/styles/reset.css" />
   <link rel="stylesheet" href="/src/style.css" />
   <link rel="stylesheet" href="/src/pages/gacha/gacha.css" />
@@ -18,6 +19,9 @@
 
   <div class="poke-get" id="pokeGet">
     <div class="card-wrapper">
+      <div class="shine"></div>
+      <div class="shine2"></div>
+      <div class="shadow"></div>
       <img id="pokeCard" class="poke-card card-ab" src="" alt="" />
       <img id="starBack" class="star-back card-ab" src="" alt="" />
       <p id="pokeName" class="poke-name card-ab"></p>
