--- a/src/pages/town/town.html
+++ b/src/pages/town/town.html
@@ -9,6 +9,7 @@
       href="/public/fonts/Galmuri9.woff"
       crossorigin="anonymous"
     />
+    <link rel="shortcut icon" href="/public/favicon/ball.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/src/style.css" />
     <link rel="stylesheet" href="./town.css" />
     <script type="module" src="./town.ts"></script>
