🚧 도감페이지 이미지클릭시 카드api

--- a/src/pages/dictionary/dictionary.html
+++ b/src/pages/dictionary/dictionary.html
@@ -64,6 +64,9 @@
       </div>
     </div>
 
+
+
+
     <div id="type-modal" class="modal hidden">
       <div class="modal-content type-modal">
         <button id="close-type-modal" class="modal-close"></button>
@@ -91,5 +94,13 @@
       </div>
     </div>
     <script type="module" src="/src/pages/dictionary/dictionary.ts"></script>
+    <!--  카드 이미지 모달 -->
+<div id="card-modal" class="hidden card-modal">
+  <div class="card-modal-content">
+    <img id="card-image" src="" alt="카드 이미지" />
+  </div>
+</div>
+
+
   </body>
 </html>
