--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
       }
     </script>
 
-    <link rel="shortcut icon" href="/public/favicon/ball.ico" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="/public/favicon/ball.ico"
+      type="image/x-icon"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="preload"
@@ -122,7 +126,7 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <img
-                src="./src/assets/index/growlithe.png"
+                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/58.gif"
                 alt="포켓몬스터 가디 캐릭터 이미지"
               />
               <h2 class="eng-pixel">
@@ -132,7 +136,7 @@
             </div>
             <div class="swiper-slide">
               <img
-                src="./src/assets/index/slowpoke.png"
+                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/79.gif"
                 alt="포켓몬스터 야돈 캐릭터 이미지"
               />
               <h2 class="eng-pixel">
@@ -142,7 +146,8 @@
             </div>
             <div class="swiper-slide">
               <img
-                src="./src/assets/index/sandshrew.png"
+                id="maradoji"
+                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/27.gif"
                 alt="포켓몬스터 모래두지 캐릭터 이미지"
               />
               <h2 class="eng-pixel">
@@ -152,7 +157,7 @@
             </div>
             <div class="swiper-slide">
               <img
-                src="./src/assets/index/ditto.png"
+                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/132.gif"
                 alt="포켓몬스터 메타몽 캐릭터 이미지"
               />
               <h2 class="eng-pixel">
