✨ gacha (카드배경 수정, 효과음 수정)

--- a/src/pages/gacha/gacha.html
+++ b/src/pages/gacha/gacha.html
@@ -18,7 +18,7 @@
   </div>
 
   <div class="poke-get" id="pokeGet">
-    <div class="card-wrapper">
+    <div id="cardBack" class="card-wrapper">
       <div class="shine"></div>
       <div class="shine2"></div>
       <div class="shadow"></div>
