💄 home에서 hlep 버튼 링크 연결 및 스타일 수정

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,7 +10,11 @@
       href="/public/fonts/Galmuri9.woff"
       crossorigin="anonymous"
     />
-    <link rel="shortcut icon" href="/public/favicon/ball.ico" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="/public/favicon/ball.ico"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="/src/style.css" />
     <link rel="stylesheet" href="./home.css" />
 
@@ -32,7 +36,13 @@
           <button type="button" class="eng-pixel press-start">
             PRESS START
           </button>
-          <a href="#" target="_self" class="eng-pixel help">HELP</a>
+          <a
+            href="https://github.com/FRONTENDBOOTCAMP-13th/JS-04-404-Not-Found/wiki/How-Use-Project"
+            target="_blank"
+            title="404 NOT FOUND 팀 깃허브 > How Use Project 페이지 새창열림"
+            class="eng-pixel help"
+            >HELP</a
+          >
         </div>
         <a
           href="https://github.com/FRONTENDBOOTCAMP-13th/JS-04-404-Not-Found"
