💄 도감 페이지 수정

--- a/src/pages/dictionary/dictionary.html
+++ b/src/pages/dictionary/dictionary.html
@@ -37,12 +37,6 @@
                 alt="포켓몬로고"
               />
             </a>
-            <div class="pokeball">
-              <img
-                src="/src/assets/dictionary/Pokebola-pokeball-png-0.png"
-                alt="포켓볼 상세조회"
-              />
-            </div>
           </div>
 
           <div class="search-bar">
@@ -60,8 +54,15 @@
               <option>미획득한 포켓몬</option>
             </select>
           </div>
-
-          <div class="pokedex-content" id="pokedex"></div>
+          <div class="pokedex-content-wrapper">
+            <div class="pokedex-content" id="pokedex"></div>
+            <div class="pokeball">
+              <img
+                src="/src/assets/dictionary/Pokebola-pokeball-png-0.png"
+                alt="포켓볼 상세조회"
+              />
+            </div>
+          </div>
         </div>
       </div>
     </div>
