--- a/src/pages/dictionary/dictionary.html
+++ b/src/pages/dictionary/dictionary.html
@@ -101,6 +101,39 @@
       </div>
     </div>
 
+    <!--안내창-->
+    <div id="notice-modal" class="modal hidden">
+      <div class="notice-modal-content">
+        <img
+          src="/src/assets/dictionary/notice.png"
+          alt="검색 결과 없음 이미지"
+        />
+
+        <!-- 버튼 -->
+        <div class="notice-buttons">
+          <div class="left-buttons">
+            <img
+              id="notice-slot-btn"
+              src="/src/assets/dictionary/notice-slot.png"
+              alt="슬롯 이동"
+            />
+            <img
+              id="notice-gacha-btn"
+              src="/src/assets/dictionary/notice-gacha.png"
+              alt="가챠 이동"
+            />
+          </div>
+          <div class="right-button">
+            <img
+              id="notice-close-btn"
+              src="/src/assets/dictionary/notice-close.png"
+              alt="닫기"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- JavaScript 모듈 로딩 -->
     <script type="module" src="/src/pages/dictionary/dictionary.ts"></script>
   </body>
